[UI] Condense navbar and fix header spacing

--- a/app/bundles/CoreBundle/Assets/css/app/less/custom.less
+++ b/app/bundles/CoreBundle/Assets/css/app/less/custom.less
@@ -113,7 +113,7 @@ label.required:after {
 //Search
 .search-container {
   position: relative;
-  line-height: 60px;
+  line-height: @header-height;
   .transition(all 0.3s ease);
 
   .search {
@@ -123,7 +123,7 @@ label.required:after {
     width: 24px;
     height: 34px;
     padding: 0 0 0 32px;
-    margin: 12px 0 0 5px;
+    margin: 6px 0 0 5px;
     z-index: 1;
     .transition(all 0.5s ease);
   }
